# Federated_Learning

./: FLcompare.py  FLcompare2.py  FLcompare3.py  README.md  cifar10_fed.py  client.py  comparative_analysis.py  create_metadata.py  data_split.py  data_split_sheet.py  federated_high_resnet50.py  high_resnet50.py  main.py  model.py  requirements.txt
CC_centralized/: README.md  (+5 more)
CC_federatedVD/: config.py  docker-compose.yml  pyproject.toml
CC_federatedVD/client/: Dockerfile  client.py
CC_federatedVD/model/: dataset.py  gan.py
CC_federatedVD/server/: Dockerfile  requirements.txt  server.py  utils.py
MNIST_FL/: README.md  client.py  client1.py  docker-compose.yml  dockerfile  example.py  main.py  model.py  pyproject.toml  requirements.txt  server.py  server1.py
MNIST_FL/CIFAR10_FL/: cifar_model.py  cifar_server.py  pyproject.toml
MNIST_FL/CIFAR10_FL/FL_Demo/: README.md  main.py  model.py
MNIST_FL/CIFAR10_FL/Project2/: client.py  model.py  singlrmachine.py  utils.py
MNIST_FL/CIFAR10_FL/Project_Eval/: README.txt  client.py  main.py
MNIST_FL/CIFAR10_FL/cifar10_fl/: client.py  main.py  model.py  server.py  utils.py
MNIST_FL/Colpos/: README.md  client.py  main.py  model.py  server.py  utils.py
MNIST_FL/Evaluation_MNIST/: Checking_comp_time_FL_Resnet50.py  client.py  main.py  paper_impl.py  server.py  statistics.py  utils.py
RSNA/PNEU_FED/: docker-compose.yml  pyproject.toml
RSNA/PNEU_FED/client/: Dockerfile  client.py  dataset.py
RSNA/PNEU_FED/config/: settings.py
RSNA/PNEU_FED/model/: model.py  utils.py
RSNA/PNEU_FED/server/: Dockerfile  server.py
(+70 files in other folders)
