[project]
name = "CC_federated"
version = "0.1.0"
description = "Federated Learning for Cervical Cancer Classification"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "opencv-python>=4.7.0",
    "scikit-learn>=1.2.0",
    "flwr>=1.4.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"