[tool.poetry]
name = "flower_federated_learning"
version = "0.1.0"
description = "Federated Learning with Flower and ResNet50"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^1.3.0"
torch = "^1.9.0"
torchvision = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"